# fixbot-terminal

./: .env.example  .gitignore  README.md  install.ps1  pyproject.toml  run.bat  run.ps1  run.sh
sysdoc/: __main__.py  config.py  main.py  requirements.txt
sysdoc/core/: conversation_memory.py  executor.py  gemini_client.py  intent_engine.py  permission_gate.py  prompt_builder.py  report_generator.py  verifier.py
sysdoc/display/: animations.py  banner.py  formatter.py
sysdoc/games/: ticket_rush.py
sysdoc/gitpilot/: ai_helper.py  config.py  git_ops.py  main.py
sysdoc/modules/: dev_env.py  file_finder.py  installer.py  network.py  storage.py  system_health.py  updater.py
sysdoc/tickets/: ticket_manager.py
website/: package-lock.json
website/src/: App.css  App.tsx  index.css
